[project]
name = "custom-news-flow-02-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.11",
    "lxml-html-clean>=0.4.2",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "openai-agents>=0.2.3",
    "python-dotenv>=1.1.1",
    "schedule>=1.2.2",
    "spacy>=3.8.7",
]
