[project]
name = "custom-news-flow-02-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "lxml-html-clean>=0.4.2",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "openai>=1.97.1",
    "openai-agents>=0.2.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "schedule>=1.2.2",
    "spacy>=3.8.7",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
